[package]
name = "reanki"
version = "0.1.0"
authors = ["Heliozoa <daniel.x.martinez@helsinki.fi>"]
edition = "2024"
rust-version = "1.85"
description = "Create Anki decks."
readme = "README.md"
repository = "https://github.com/Heliozoa/reanki"
license = "MPL-2.0"
keywords = ["anki", "flashcards"]
categories = []
resolver = "2"

[dependencies]
diesel = { version = "2.2.11", features = [
  "sqlite",
  "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = { version = "2.2.0", features = ["sqlite"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
serde = "1.0.219"
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
zip = "4.1.0"
